# projekthpc

./: CMakeLists.txt  solver_speedup.xlsx
src/: solver.cpp  solver_Eigen.cpp  solver_Eigen_block.cpp  solver_github.cpp  solver_parallel_for.cpp  solver_parallel_for_print.cpp  solver_source.cpp  withEigen2.cpp
